--- a/fe/src/app/auth/signup/signup.component.html
+++ b/fe/src/app/auth/signup/signup.component.html
@@ -14,7 +14,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-5">
           <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-white pb-5">
+            <div class="card-header bg-white">
               <div class="text-muted text-center mb-3">
                 <small>Sign up with</small>
               </div>
@@ -38,7 +38,7 @@
                       <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                     </div>
                     <input class="form-control" #account id="account" (keypress)="omit_special_char_email($event)"
-                      (blur)="changeHandler('account')" (focus)="focusAccount()" placeholder="name@email.com"
+                      (blur)="changeHandler('account')" (focus)="focusAccount()" placeholder="Tài khoản"
                       type="text" aria-describedby="email-help" maxlength="50" [(ngModel)]="account_name">
                   </div>
                   <!-- <div *ngIf="account_name" class="delete" (click)="clearEmail()">
@@ -46,30 +46,30 @@
                   </div>
                     <span *ngIf="password.value && !validatePassword(password.value)" class="error"> Mật khẩu tối thiểu tám ký tự, ít nhất một chữ cái, một số và một ký tự đặc biệt.</span> -->
                 </div>
-                <div class="form-group" [ngClass]="{'focused':focus===true}">
-                  <div class="input-group input-group-alternative mb-3">
-                    <div class="input-group-prepend">
+                <div class="form-group margin0" [ngClass]="{'focused':focus===true}">
+                  <div class="input-group-alternative mb-3"  style="display: flex; width: 45%; margin-right: 2rem;">
+                    <div class="" style="display: flex;">
                       <span class="input-group-text"><i class="fas fa-user"></i></span>
                     </div>
                     <input class="form-control" (keypress)="omit_special_char_email($event)"
                       placeholder="Họ" [(ngModel)]="first_name">
                   </div>
-                  <div class="input-group input-group-alternative mb-3">
-                    <div class="input-group-prepend">
+                  <div class="input-group-alternative mb-3"  style="display: flex; width: 45%;">
+                    <div class=""  style="display: flex;">
                       <span class="input-group-text"><i class="fas fa-user"></i></span>
                     </div>
                     <input class="form-control" (keypress)="omit_special_char_email($event)"
                       placeholder="Tên" [(ngModel)]="last_name">
                   </div>
                 </div>
-                <div class="form-group" [ngClass]="{'focused':focus1===true}">
+                <div class="form-group margin0" [ngClass]="{'focused':focus1===true}">
                   <label>Giới tính:</label>
-                  <div class="form-check">
+                  <div class="form-check" style="display: flex; width: 35%; margin-left: 1rem;">
                     <input class="form-check-input" type="radio" id="nam" name="gender" value="Nam"
                       [(ngModel)]="gender">
                     <label class="form-check-label" for="nam">Nam</label>
                   </div>
-                  <div class="form-check">
+                  <div class="form-check" style="display: flex; width: 35%;">
                     <input class="form-check-input" type="radio" id="nu" name="gender" value="Nữ" [(ngModel)]="gender">
                     <label class="form-check-label" for="nu">Nữ</label>
                   </div>
@@ -79,7 +79,7 @@
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="fas fa-phone"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Phone Number" type="text" (focus)="focus=true"
+                    <input class="form-control" placeholder="Số điện thoại" type="text" (focus)="focus=true"
                       (blur)="focus1=false">
                   </div>
                 </div>
@@ -97,28 +97,30 @@
                   </div> -->
                   <span *ngIf="emailExist" class="error"> Email đã được đăng ký.</span>
                 </div>
-                <div class="form-group" [ngClass]="{'focused':focus3===true}">
+                <div class="form-group margin0" [ngClass]="{'focused':focus3===true}">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password" type="password" [(ngModel)]="pwd" type="password"
+                    <input class="form-control" placeholder="Mật khẩu" type="password" [(ngModel)]="pwd" type="password"
                       name="password" #password id="password" (focus)="focus2=true" (blur)="focus3=false">
                   </div>
                 </div>
                 <span *ngIf="password.value && !validatePassword(password.value)" class="error"> Mật khẩu tối thiểu tám
                   ký tự, ít nhất một chữ cái, một số và một ký tự đặc biệt.</span>
-                <div class="text-muted font-italic" style="margin-top: -1rem; margin-bottom: 1rem;">
+                <div class="text-muted font-italic" style="margin-bottom: 1rem;">
                   <small>password strength:
                     <span class="text-success font-weight-700">strong</span>
                   </small>
                 </div>
-                <div class="form-group" [ngClass]="{'focused':focus4===true}">
+
+                <label>Nhập lại mật khẩu: </label>
+                <div class="form-group margin0" [ngClass]="{'focused':focus4===true}">
                   <div class="input-group input-group-alternative">
                     <div class="input-group-prepend">
                       <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                     </div>
-                    <input class="form-control" placeholder="Password" type="password" [(ngModel)]="repwd"
+                    <input class="form-control" placeholder="Nhập lại mật khẩu" type="password" [(ngModel)]="repwd"
                       type="password" name="repassword" #repassword id="repassword" (focus)="focus2=true"
                       (blur)="focus4=false">
                   </div>
@@ -130,7 +132,7 @@
                     <div class="custom-control custom-control-alternative custom-checkbox">
                       <input class="custom-control-input" id="customCheckRegister" type="checkbox">
                       <label class="custom-control-label" for="customCheckRegister"
-                        (change)="checkCheckBoxvalue($event)">
+                        (click)="checkCheckBoxvalue()">
                         Tôi đồng ý với
                         <a href="javascript:void(0)" class="text-red-600">
                           Điều khoản </a>
