--- a/fe/src/app/shared/navbar/navbar.component.html
+++ b/fe/src/app/shared/navbar/navbar.component.html
@@ -141,7 +141,7 @@
 </nav>
 
 <!-- NAVBAR - ADMIN SCREEN -->
-<nav *ngIf="true" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
+<nav *ngIf="adminNavbar" class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
     <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active"
