--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -3,7 +3,7 @@
     <div class="header-body">
       <!-- Card stats -->
       <div class="row">
-        <div class="col-xl-6 col-lg-6">
+        <div class="col-xl-4 col-lg-6">
           <div class="card card-stats mb-4 mb-xl-0">
             <div class="card-body">
               <div class="row">
@@ -14,11 +14,11 @@
                       aria-describedby="serviceName-help" maxlength="50">
                   </div>
 
-                  <div class="search-date">
+                  <!-- <div class="search-date">
                     <h5 class="card-title text-uppercase text-muted mb-0 font14">Ngày làm</h5>
                     <input placeholder="Booking #1" [(ngModel)]="date" type="text"
                       aria-describedby="date-help" maxlength="50">
-                  </div>
+                  </div> -->
 
                 </div>
 
@@ -46,30 +46,36 @@
           <h3 class="mb-0 font20">Danh sách đơn dịch vụ:</h3>
         </div>
         <div class="table-responsive">
-          <div class="showtime-options">
-            <carousel height="87px" cellsToShow="7" *ngIf="dateList && dateList.length >= 7">
-                <div [ngClass]="{'selected':selectedDate===showtime}"
-                    class="carousel-cell" *ngFor="let showtime of dateList"
-                    (click)="viewDetail(showtime)">
-                    <div class="left">{{getDay(showtime.data[0].Session_dtmDate_Time)}}</div>
-                    <div class="right"><span>/{{getMonth(showtime.data[0].Session_dtmDate_Time)}}
-                        </span><span>{{getDateMonth(showtime.data[0].Session_dtmDate_Time)}}</span>
-                    </div>
+          <div class="showtime-options" *ngFor="let date of dateSchedule">
+            <label> - {{date.name}}: <span>({{date.startTime}} - {{date.endTime}})</span></label>
+            <carousel height="87px" cellsToShow="7" *ngIf="date.workDate && date.workDate.length >= 7">
+              <div [ngClass]="{'selected':selectedDate===showtime}" class="carousel-cell"
+                *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
+                <div class="left">{{getDay(showtime)}}</div>
+                <div class="right"><span>/{{getMonth(showtime)}}
+                  </span><span>{{getDateMonth(showtime)}}</span>
                 </div>
+              </div>
             </carousel>
-            <div class="select-date-container" height="87px" cellsToShow="7" *ngIf="dateList && dateList.length < 7">
-                <div [ngClass]="{'selected':selectedDate===showtime}"
-                    class="datetimeBtn" *ngFor="let showtime of dateList"
-                    (click)="viewDetail(showtime)">
-                    <div class="left">{{getDay(showtime)}}</div>
-                    <div class="right"><span>/{{getMonth(showtime)}}
-                        </span><span>{{getDateMonth(showtime)}}</span>
-                    </div>
+
+            <div class="select-date-container" height="87px" cellsToShow="7"
+              *ngIf="date.workDate && date.workDate.length < 7">
+              <div [ngClass]="{'selected':selectedDate===showtime}" class="datetimeBtn"
+                *ngFor="let showtime of date.workDate" (click)="viewDetailinSchedule(date.id, showtime)">
+                <div class="left">{{getDay(showtime)}}</div>
+                <div class="right"><span>/{{getMonth(showtime)}}
+                  </span><span>{{getDateMonth(showtime)}}</span>
                 </div>
+              </div>
             </div>
-
+          </div>
         </div>
-
+        <div class="table-responsive" style="margin-top: 2rem;">
+          <div class="showtime-bydate" *ngFor="let date of dateList">
+            <span> - {{date.name}}: ({{date.startTime}} - {{date.endTime}}): </span>
+            <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
+            <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
+          </div>
         </div>
         <!-- <div class="card-footer py-4">
           <nav aria-label="...">
