--- a/fe/src/app/employee/tables.component.scss
+++ b/fe/src/app/employee/tables.component.scss
@@ -1424,4 +1424,13 @@
   .search-status {
     width: 75%;
   }
+  .search-emp {
+    display: block;
+  }
+
+  .icon {
+    margin-top: 1rem !important;
+    width: 2rem !important;
+    height: 2rem !important;
+}
 }
