--- a/fe/src/app/employee/schedule/schedule.component.scss
+++ b/fe/src/app/employee/schedule/schedule.component.scss
@@ -27,6 +27,7 @@
   border-radius: 0.375rem;
   background-color: #fff;
   background-clip: border-box;
+  padding: 1rem 1rem 2rem 1rem;
 }
 
 .card>hr {
@@ -1286,15 +1287,15 @@
 }
 
 .badge-md {
-  padding: .65em 1em;
+  padding: 0.65em 1em;
 }
 
 .badge-lg {
-  padding: .85em 1.375em;
+  padding: 0.85em 1.375em;
 }
 
 .badge-inline {
-  margin-right: .625rem;
+  margin-right: 0.625rem;
 }
 
 .badge-inline+span {
@@ -1307,15 +1308,15 @@
 }
 
 .btn .badge:not(:first-child) {
-  margin-left: .5rem;
+  margin-left: 0.5rem;
 }
 
 .btn .badge:not(:last-child) {
-  margin-right: .5rem;
+  margin-right: 0.5rem;
 }
 
 .badge-circle {
-  font-size: .875rem;
+  font-size: 0.875rem;
 
   display: inline-flex;
 
@@ -1331,7 +1332,7 @@
 }
 
 .badge-dot {
-  font-size: .875rem;
+  font-size: 0.875rem;
   font-weight: 400;
 
   padding-right: 0;
@@ -1349,9 +1350,9 @@
 .badge-dot i {
   display: inline-block;
 
-  width: .375rem;
-  height: .375rem;
-  margin-right: .375rem;
+  width: 0.375rem;
+  height: 0.375rem;
+  margin-right: 0.375rem;
 
   vertical-align: middle;
 
@@ -1359,13 +1360,13 @@
 }
 
 .badge-dot.badge-md i {
-  width: .5rem;
-  height: .5rem;
+  width: 0.5rem;
+  height: 0.5rem;
 }
 
 .badge-dot.badge-lg i {
-  width: .625rem;
-  height: .625rem;
+  width: 0.625rem;
+  height: 0.625rem;
 }
 
 .font14 {
@@ -1382,7 +1383,7 @@
 }
 
 .search-name {
-  width: 30%;
+  width: 80%;
   margin-right: 10px;
 
   input {
@@ -1424,84 +1425,105 @@
   .search-status {
     width: 75%;
   }
+
+  .search-emp {
+    display: block;
+  }
+
+  .icon {
+    margin-top: 1rem !important;
+    width: 2rem;
+    height: 2rem;
+  }
 }
 
-
+.showtime-bydate {
+  font-size: 14px;
+  padding: 0.5rem 0;
+}
 
 .showtime-options {
   border: 0em;
   // background-color: #232323;
   max-width: 960px;
   height: 151px;
-  margin: 0 32px;
+  margin: 0 32px 10px 32px;
+
+  label {
+    margin-bottom: -2rem !important;
+  }
 
   .selected {
-      background-color: #232323 !important;
-      color: #171617 !important;
-      border-color: 1px solid #232323 !important;
+    background-color: #232323 !important;
+    color: #795200 !important;
+    border-color: 1px solid #232323 !important;
   }
 
   .carousel-cell {
-      border-radius: 4px;
-      background-color: rgba(255, 255, 255, 0.19);
-      height: 87px;
-      width: 115px;
-      border: 1px solid #232323 !important;
-      margin: 32px 12px 32px 0px;
-      color: #232323;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0.19);
+    height: 87px;
+    width: 130px;
+    border: 2px solid #fce793 !important;
+    margin: 32px 12px 32px 0px;
+    color: #795200;
 
-      &:hover {
-          box-shadow: 1px 1px 1px 1px #ffe991;
-          background-color: #ffd530;
-          color: #171617;
+    &:hover {
+      box-shadow: 1px 1px 1px 1px #fce793;
+      background-color: #fce793;
+      color: #795200;
+      cursor: pointer;
+    }
+
+    &:active {
+      box-shadow: 1px 1px 1px 1px #fce793;
+      background-color: #fce793;
+      color: #795200;
+      transform: translateY(2px);
+      cursor: pointer;
+    }
+
+    &:after {
+      box-shadow: 1px 1px 1px 1px #fce793;
+      background-color: #fce793;
+      color: #795200;
+      cursor: pointer;
+
+    }
+
+    &:focus {
+      outline: none !important;
+    }
+
+    .left {
+      float: left;
+      font-size: 35px;
+      font-family: "Inter";
+      font-style: normal;
+      font-weight: 800;
+      width: 46px;
+      height: 48px;
+      margin: 20px 1px 20px 10px;
+      text-align: right;
+    }
+
+    .right {
+      float: right;
+      font-family: "Inter";
+      font-style: medium;
+      font-weight: 500;
+      width: 48px;
+      height: 48px;
+      margin: 21px 15px 20px 0px;
+
+      span {
+        height: 24px;
+        float: left;
+        width: 100%;
+        font-size: 16px;
+        line-height: 22px;
       }
-
-      &:active {
-          box-shadow: 1px 1px 1px 1px #ffe991;
-          background-color: #ffd530;
-          color: #171617;
-          transform: translateY(2px);
-      }
-
-      &:after {
-          box-shadow: 1px 1px 1px 1px #ffe991;
-          background-color: #ffd530;
-          color: #171617;
-      }
-
-      &:focus {
-          outline: none !important;
-      }
-
-      .left {
-          float: left;
-          font-size: 40px;
-          font-family: "Inter";
-          font-style: normal;
-          font-weight: 800;
-          width: 46px;
-          height: 48px;
-          margin: 20px 1px 20px 10px;
-          text-align: right;
-      }
-
-      .right {
-          float: right;
-          font-family: "Inter";
-          font-style: medium;
-          font-weight: 500;
-          width: 48px;
-          height: 48px;
-          margin: 21px 15px 20px 0px;
-
-          span {
-              height: 24px;
-              float: left;
-              width: 100%;
-              font-size: 16px;
-              line-height: 22px;
-          }
-      }
+    }
   }
 
   .select-date-container {
@@ -1510,65 +1532,64 @@
     height: 150px;
     display: flex;
     // cursor: grab;
-    margin: 0 60px;
+    margin: -10px 60px 0 60px;
 
     .datetimeBtn {
-        border-radius: 4px;
-        background-color: rgba(255, 255, 255, 0.19);
-        height: 90px;
-        width: 135px !important;
-        border: 1px solid #232323 !important;
-        margin: 32px 12px 32px 0px;
-        color: #232323;
+      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.19);
+      height: 87px;
+      width: 130px !important;
+      border: 2px solid #fce793 !important;
+      margin: 32px 12px 32px 0px;
+      color: #795200;
 
-        &:hover {
-            box-shadow: 1px 1px 1px 1px #ffe991;
-            background-color: #ffd530;
-            color: #171617;
+      &:hover {
+        box-shadow: 1px 1px 1px 1px #fce793;
+        background-color: #fce793;
+        color: #795200;
+      }
+
+      &:active {
+        box-shadow: 1px 1px 1px 1px #fce793;
+        background-color: #fce793;
+        color: #795200;
+      }
+
+      &:after {
+        box-shadow: 1px 1px 1px 1px #fce793;
+        background-color: #fce793;
+        color: #795200;
+      }
+
+      .left {
+        float: left;
+        font-size: 35px;
+        font-family: "Inter";
+        font-style: normal;
+        font-weight: 800;
+        width: 48px;
+        height: 48px;
+        margin: 18px 1px 20px 10px;
+        text-align: right;
+      }
+
+      .right {
+        float: right;
+        font-family: "Inter";
+        font-style: medium;
+        font-weight: 500;
+        width: 48px;
+        height: 48px;
+        margin: 21px 15px 20px 0px;
+
+        span {
+          height: 24px;
+          float: left;
+          width: 100%;
+          font-size: 16px;
+          line-height: 22px;
         }
-
-        &:active {
-            box-shadow: 1px 1px 1px 1px #ffe991;
-            background-color: #ffd530;
-            color: #171617;
-        }
-
-        &:after {
-            box-shadow: 1px 1px 1px 1px #ffe991;
-            background-color: #ffd530;
-            color: #171617;
-        }
-
-        .left {
-            float: left;
-            font-size: 40px;
-            font-family: "Inter";
-            font-style: normal;
-            font-weight: 800px;
-            width: 46px;
-            height: 48px;
-            margin: 20px 1px 20px 10px;
-            text-align: right;
-        }
-
-        .right {
-            float: right;
-            font-family: "Inter";
-            font-style: medium;
-            font-weight: 500;
-            width: 48px;
-            height: 48px;
-            margin: 21px 15px 20px 0px;
-
-            span {
-                height: 24px;
-                float: left;
-                width: 100%;
-                font-size: 16px;
-                line-height: 22px;
-            }
-        }
+      }
     }
-}
-
+  }
 }
