--- a/fe/src/app/customer/customer-profile/customer-profile.component.html
+++ b/fe/src/app/customer/customer-profile/customer-profile.component.html
@@ -27,28 +27,20 @@
               <div class="card-profile-stats d-flex justify-content-center">
                 <div>
                   <span class="heading">{{ activityYear }}</span>
-                  <span class="description">Năm làm</span>
+                  <span class="description">Năm tham gia</span>
                 </div>
                 <div>
-                  <span class="heading">{{ ratingNumber }}</span>
-                  <span class="description">Số dịch vụ</span>
-                </div>
-                <div>
-                  <span class="heading">{{ averageRating }}</span>
-                  <span class="description">Đánh giá</span>
+                  <span class="heading">{{ totalBooking }}</span>
+                  <span class="description">Số đơn đã đặt</span>
                 </div>
               </div>
             </div>
           </div>
           <div class="text-center">
-            <h3>
-              Các bài đánh giá và phản hồi <span class="font-weight-light">({{ ratingNumber }})</span>
-            </h3>
-            <hr class="my-4" />
-            <div class="star-rating" [innerHTML]="generateStarRating(averageRating)"></div>
-            <p>{{review}}</p>
-            <a style="text-decoration: none; color: #5e72e4; background-color: transparent; cursor: pointer;"
-              (click)="showMore(cleanerId)">Xem thêm</a>
+
+            <div class="col-12 text-right">
+              <a href="/change-password" class="btn btn-sm btn-primary">Đổi mật khẩu</a>
+            </div>
           </div>
         </div>
       </div>
@@ -61,10 +53,10 @@
               <h3 class="mb-0">{{name}}</h3>
             </div>
             <div class="col-2 text-right">
-              <a href="/schedule" class="btn btn-sm btn-primary">Lịch công việc</a>
+              <a href="/customer-schedule" class="btn btn-sm btn-primary">Lịch sử</a>
             </div>
             <div class="col-2 text-right">
-              <a href="/history" class="btn btn-sm btn-primary">Lịch sử dịch vụ</a>
+              <a href="/customer-history" class="btn btn-sm btn-primary">Đơn đã đặt</a>
             </div>
           </div>
         </div>
@@ -103,6 +95,7 @@
                       value="Jesse">
                   </div>
                 </div>
+
               </div>
             </div>
             <hr class="my-4" />
@@ -119,13 +112,6 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-4">
-                  <div class="form-group">
-                    <label class="form-control-label" for="input-country">Chi nhánh làm việc</label>
-                    <input type="text" id="input-branch" class="form-control form-control-alternative"
-                      placeholder="Ha Noi">
-                  </div>
-                </div>
                 <div class="col-lg-4">
                   <div class="form-group">
                     <label class="form-control-label" for="input-country">Số điện thoại</label>
