update and fix màn booking

--- a/fe/src/app/app.component.html
+++ b/fe/src/app/app.component.html
@@ -1,9 +1,12 @@
+<!-- Màn hình guest/customer -->
 <div *ngIf="false">
     <app-navbar></app-navbar>
     <!-- Sidenav -->
     <router-outlet></router-outlet>
     <app-footer></app-footer>
 </div>
+
+<!-- Màn hình quản lý -->
 <div *ngIf="true">
     <app-sidebar></app-sidebar>
     <!-- [ngClass]="{'main-content':adminNavbar===true}" -->
