--- a/fe/src/app/booking/booking.component.scss
+++ b/fe/src/app/booking/booking.component.scss
@@ -1,307 +1,339 @@
 .slider-price {
-    margin-left: 30px !important;
-    width: 30%;
+  margin-left: 30px !important;
+  width: 30%;
+}
+
+.input-group input {
+  height: 35px !important;
+  width: 30%;
+}
+
+.input-group p {
+  padding-top: 5px;
+  padding-right: 15px;
+  width: 15%;
+}
+
+.takenote {
+  color: red;
+  font-size: 12px;
+  margin-top: 5px;
+}
+
+h6 {
+  margin-top: 1.5rem;
+}
+
+#houseType {
+  height: 35px;
+  width: 12%;
+  text-align: center;
+}
+
+#serviceType {
+  height: 35px;
+  width: 30%;
+  text-align: center;
+}
+
+#timeType {
+  height: 35px;
+  width: 20%;
+  text-align: center;
+}
+
+#floors {
+  height: 35px;
+  width: 5%;
+  text-align: center;
+}
+
+#area {
+  height: 35px;
+  width: 25%;
+  text-align: center;
+}
+
+.extension-service {
+  width: 75%;
+}
+
+.date-pickertime {
+  display: flex;
+  margin-top: 1rem;
+
+  .pickday {
+    width: 15%;
+    height: 36px;
+    font-size: 11px;
+    margin-right: 5rem;
   }
-  
+
+  .showTime {
+    width: 40%;
+
+    span {
+      font-weight: 700;
+    }
+  }
+}
+
+.term-and-conditions {
+  float: left;
+  width: 100%;
+  background: #fff;
+  margin-top: 10px;
+  border-radius: 5px;
+  padding: 10px 0px 15px;
+
+  h6 {
+    font-size: 12px;
+    line-height: 14px;
+    text-align: left;
+    color: #333;
+    float: left;
+    font-weight: bold;
+  }
+
+  .term {
+    float: right;
+    font-size: 12px;
+    cursor: pointer;
+    // background: url("../../assets/img/popup.png");
+    background-repeat: no-repeat;
+    padding-left: 15px;
+    color: #00529a;
+    margin-bottom: 10px;
+  }
+
+  .payment_review {
+    float: left;
+    width: 100%;
+
+    .payment-form-iframe {
+      float: left;
+      width: 100%;
+      background: #fafafa;
+      border: 1px solid #ededed;
+      border-radius: 3px;
+      margin-bottom: 8px;
+      font-size: 12px;
+      text-align: left;
+      line-height: 16px;
+      max-height: 105px;
+      overflow-y: auto;
+      overflow-x: hidden;
+      padding: 15px 30px;
+    }
+  }
+
+  .center {
+    float: left;
+    width: 100%;
+
+    .m_row {
+      p {
+        font-size: 12px;
+        line-height: 16px;
+        color: #333;
+        margin-bottom: 5px;
+      }
+    }
+  }
+
+  .term-payment {
+    vertical-align: middle;
+    float: left;
+    width: 100%;
+
+    .term-payment-box {
+      display: block;
+      position: relative;
+      padding-left: 35px;
+      margin-bottom: 5px;
+      cursor: pointer;
+      font-size: 12px;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+
+      label {
+        color: #00529a;
+        margin-bottom: 0;
+        font-size: 12px;
+        margin: 0;
+        cursor: pointer;
+        position: relative;
+        padding-left: 25px;
+      }
+
+      input {
+        position: absolute;
+        opacity: 0;
+        cursor: pointer;
+        height: 0;
+        width: 0;
+      }
+
+      input:checked ~ .checkmark {
+        background-color: #00529c;
+        border: 1px solid #00529c;
+      }
+
+      .checkmark {
+        position: absolute;
+        top: -1px;
+        left: 0;
+        height: 15px;
+        width: 15px;
+        background-color: #fff;
+        border-radius: 3px;
+        border: 1px solid #888;
+      }
+
+      input:checked ~ .checkmark:after {
+        display: block;
+      }
+
+      .checkmark:after {
+        left: 3px;
+        top: 0px;
+        width: 7px;
+        height: 11px;
+        border: solid white;
+        border-width: 0 3px 3px 0;
+        -webkit-transform: rotate(45deg);
+        -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+      }
+
+      .checkmark:after {
+        content: "";
+        position: absolute;
+        display: none;
+      }
+    }
+
+    .term-payment-box {
+      padding: 0;
+      margin: 0 auto;
+      width: auto;
+      border-radius: 5px;
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 992px) {
+  .slider-price {
+    margin-left: 30px !important;
+    width: 55%;
+  }
+
   .input-group input {
     height: 35px !important;
-    width: 30%;
+    width: 55%;
   }
-  
+
   .input-group p {
     padding-top: 5px;
     padding-right: 15px;
-    width: 15%;
+    width: 40%;
+    font-size: 12px;
   }
-  
+
   .takenote {
     color: red;
     font-size: 12px;
     margin-top: 5px;
   }
-  
+
   h6 {
     margin-top: 1.5rem;
   }
-  
+
   #houseType {
     height: 35px;
-    width: 12%;
+    width: 35%;
     text-align: center;
   }
-  
-  #serviceType {
-    height: 35px;
-    width: 30%;
-    text-align: center;
-  }
-  
-  #timeType {
-    height: 35px;
-    width: 20%;
-    text-align: center;
-  }
-  
+
   #floors {
-    height: 35px;
-    width: 5%;
-    text-align: center;
-  }
-  
-  #area {
     height: 35px;
     width: 25%;
     text-align: center;
   }
-  
+
+  #serviceType {
+    height: 35px;
+    width: 35%;
+    text-align: center;
+  }
+
+  #timeType {
+    height: 35px;
+    width: 25%;
+    text-align: center;
+  }
+
+  #area {
+    height: 35px;
+    width: 50%;
+    text-align: center;
+  }
+
   .extension-service {
-    width: 75%;
+    width: 85%;
   }
-  
-  .date-pickertime {
-    display: flex;
-    margin-top: 1rem;
-  
-    .pickday {
-      width: 15%;
-      height: 36px;
-      font-size: 11px;
-      margin-right: 5rem;
-    }
-  
-  
-  
-    .showTime {
-      width: 40%;
-  
-      span {
-        font-weight: 700;
-      }
-    }
-  }
-  
+
   .term-and-conditions {
-    float: left;
-    width: 100%;
-    background: #fff;
-    margin-top: 10px;
-    border-radius: 5px;
-    padding: 10px 20px 15px;
-  
+    padding: 15px;
+
     h6 {
-      font-size: 12px;
-      line-height: 14px;
-      text-align: left;
-      color: #333;
-      float: left;
-      font-weight: bold;
+      //   font-size: 14px;
     }
-  
-    .term {
-      float: right;
-      font-size: 12px;
-      cursor: pointer;
-      // background: url("../../assets/img/popup.png");
-      background-repeat: no-repeat;
-      padding-left: 15px;
-      color: #00529a;
-      margin-bottom: 10px;
-    }
-  
-    .payment_review {
-      float: left;
-      width: 100%;
-  
-      .payment-form-iframe {
-        float: left;
-        width: 100%;
-        background: #fafafa;
-        border: 1px solid #ededed;
-        border-radius: 3px;
-        margin-bottom: 8px;
-        font-size: 12px;
-        text-align: left;
-        line-height: 16px;
-        max-height: 105px;
-        overflow-y: auto;
-        overflow-x: hidden;
-        padding: 15px 30px;
-      }
-    }
-  
+
     .center {
-      float: left;
-      width: 100%;
-  
       .m_row {
         p {
-          font-size: 12px;
-          line-height: 16px;
-          color: #333;
-          margin-bottom: 5px;
-        }
-      }
-    }
-  
-    .term-payment {
-      vertical-align: middle;
-      float: left;
-      width: 100%;
-  
-      .term-payment-box {
-        display: block;
-        position: relative;
-        padding-left: 35px;
-        margin-bottom: 5px;
-        cursor: pointer;
-        font-size: 12px;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
-        user-select: none;
-  
-        label {
-          color: #00529a;
-          margin-bottom: 0;
-          font-size: 12px;
-          margin: 0;
-          cursor: pointer;
-          position: relative;
-          padding-left: 25px;
-        }
-  
-        input {
-          position: absolute;
-          opacity: 0;
-          cursor: pointer;
-          height: 0;
-          width: 0;
-        }
-  
-        input:checked~.checkmark {
-          background-color: #00529c;
-          border: 1px solid #00529c;
-        }
-  
-        .checkmark {
-          position: absolute;
-          top: -1px;
-          left: 0;
-          height: 15px;
-          width: 15px;
-          background-color: #fff;
-          border-radius: 3px;
-          border: 1px solid #888;
-        }
-  
-        input:checked~.checkmark:after {
-          display: block;
-        }
-  
-        .checkmark:after {
-          left: 3px;
-          top: 0px;
-          width: 7px;
-          height: 11px;
-          border: solid white;
-          border-width: 0 3px 3px 0;
-          -webkit-transform: rotate(45deg);
-          -ms-transform: rotate(45deg);
-          transform: rotate(45deg);
-        }
-  
-        .checkmark:after {
-          content: "";
-          position: absolute;
-          display: none;
-        }
-      }
-  
-      .term-payment-box {
-        padding: 0;
-        margin: 0 auto;
-        width: auto;
-        border-radius: 5px;
-        text-align: center;
-      }
-    }
-  }
-  
-  @media (max-width: 992px) {
-    .slider-price {
-      margin-left: 30px !important;
-      width: 55%;
-    }
-  
-    .input-group input {
-      height: 35px !important;
-      width: 55%;
-    }
-  
-    .input-group p {
-      padding-top: 5px;
-      padding-right: 15px;
-      width: 40%;
-      font-size: 12px;
-    }
-  
-    .takenote {
-      color: red;
-      font-size: 12px;
-      margin-top: 5px;
-    }
-  
-    h6 {
-      margin-top: 1.5rem;
-    }
-  
-    #houseType {
-      height: 35px;
-      width: 35%;
-      text-align: center;
-    }
-  
-    #floors {
-      height: 35px;
-      width: 25%;
-      text-align: center;
-    }
-  
-    #serviceType {
-      height: 35px;
-      width: 35%;
-      text-align: center;
-    }
-  
-    #timeType {
-      height: 35px;
-      width: 25%;
-      text-align: center;
-    }
-  
-    #area {
-      height: 35px;
-      width: 50%;
-      text-align: center;
-    }
-  
-    .extension-service {
-      width: 85%;
-    }
-  
-    .term-and-conditions {
-      padding: 15px;
-  
-      h6 {
-        //   font-size: 14px;
-      }
-  
-      .center {
-        .m_row {
-          p {
-            font-size: 10px;
-          }
+          font-size: 10px;
         }
       }
     }
   }
+}
+
+.note-section {
+  width: 100%;
+}
+
+.card-body {
+  padding: 2.5rem;
+}
+
+.description {
+  width: 80%;
+  margin-bottom: 5px;
+}
+
+.action-cleaner {
+  cursor: pointer;
+}
+
+.disabled {
+  background-color: #dddddd !important;
+  border-color: #dddddd !important;
+}
+
+.button-payment {
+  padding-top: 30px;
+  display: flex;
+  margin-bottom: 2rem;
+}
+
+.btn-pay {
+  width: 20%;
+  margin-right: 3rem;
+  text-align: center;
+}
