--- a/fe/src/app/employee/schedule/schedule.component.html
+++ b/fe/src/app/employee/schedule/schedule.component.html
@@ -43,9 +43,57 @@
     <div class="col">
       <div class="card shadow">
         <div class="card-header border-0">
-          <h3 class="mb-0 font20">Danh sách đơn dịch vụ:</h3>
+          <h3 class="mb-0 font20">Danh sách đơn dịch vụ định kỳ:</h3>
         </div>
         <div class="table-responsive">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Mã đơn</th>
+                <th scope="col">Tên người thuê</th>
+                <th scope="col">Số điện thoại</th>
+                <th scope="col">Địa chỉ</th>
+                <th scope="col">Loại nhà</th>
+                <th scope="col">Trạng thái</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let booking of bookingList">
+                <th scope="row">
+                  <div class="media align-items-center">
+                    <div class="media-body">
+                      <span class="mb-0 text-sm">{{booking.id}}</span>
+                    </div>
+                  </div>
+                </th>
+                <td>
+                  {{booking.hostName}}
+                </td>
+                <td>
+                  {{booking.hostPhone}}
+                </td>
+                <td>
+                  {{booking.hostAddress}}
+                </td>
+                <td>
+                  {{booking.houseType}}
+                </td>
+                <td>
+                  {{booking.status}}
+                </td>
+                <td class="text-center">
+                  <div>
+                    <a class="dropdown-item"
+                      (click)="showDetail(booking.id, booking.reivew, booking.note, booking.name)">Xem thông
+                      tin</a>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+        <!-- <div class="table-responsive">
           <div class="showtime-options" *ngFor="let date of dateSchedule">
             <label> - {{date.name}}: <span>({{date.startTime}} - {{date.endTime}})</span></label>
             <carousel height="87px" cellsToShow="7" *ngIf="date.workDate && date.workDate.length >= 7">
@@ -76,32 +124,59 @@
             <span style="font-weight: 700; font-size: 16px"> {{date.workDate}} </span>
             <u (click)="viewDetailinSchedule(date.id, date.workDate)"> (Xem chi tiết)</u>
           </div>
-        </div>
-        <!-- <div class="card-footer py-4">
-          <nav aria-label="...">
-            <ul class="pagination justify-content-end mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" href="javascript:void(0)" tabindex="-1">
-                  <i class="fas fa-angle-left"></i>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="javascript:void(0)">1</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">
-                  <i class="fas fa-angle-right"></i>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
         </div> -->
+
+      </div>
+      <div class="card shadow" style="margin-top: 5rem;">
+        <div class="card-header border-0">
+          <h3 class="mb-0 font20">Danh sách đơn dịch vụ theo ngày:</h3>
+        </div>
+        <div class="table-responsive">
+          <table class="table align-items-center table-flush">
+            <thead class="thead-light">
+              <tr>
+                <th scope="col">Mã đơn</th>
+                <th scope="col">Tên người thuê</th>
+                <th scope="col">Số điện thoại</th>
+                <th scope="col">Địa chỉ</th>
+                <th scope="col">Loại nhà</th>
+                <th scope="col">Trạng thái</th>
+                <th scope="col"></th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr *ngFor="let booking of bookingList">
+                <th scope="row">
+                  <div class="media align-items-center">
+                    <div class="media-body">
+                      <span class="mb-0 text-sm">{{booking.id}}</span>
+                    </div>
+                  </div>
+                </th>
+                <td>
+                  {{booking.hostName}}
+                </td>
+                <td>
+                  {{booking.hostPhone}}
+                </td>
+                <td>
+                  {{booking.hostAddress}}
+                </td>
+                <td>
+                  {{booking.houseType}}
+                </td>
+                <td>
+                  {{booking.status}}
+                </td>
+                <td class="text-center">
+                  <div>
+                    <a class="dropdown-item" href="/user-profile">Xem thông tin</a>
+                  </div>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
